<resources>
    <string name="app_name">Covid-19 Symptom Monitor</string>
    <string name="symptoms">Symptoms</string>
    <string name="upload_signs">Upload Signs</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="symptom_logging_page">Symptom Logging Page</string>
    <string name="upload_symptoms">Upload Symptoms</string>
    <string name="symptom_rating">Symptom Rating</string>
    <string name="select_symptom">Select Symptom</string>
    <string name="crash_dialog_title">Error</string>
    <string name="crash_dialog_message">
        Unfortunately Covid-19 Symptom Monitor has stopped working!
    </string>
    <string name="exit_dialog_title">Exiting App!</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="uploading_symptoms_data">Uploading Symptoms Data.</string>
    <string name="uploading_symptoms_data_success">Successfully Uploaded Symptoms!</string>
    <string name="uploading_measured_signs_data">Uploading Measured Signs Data.</string>
    <string name="uploading_measured_signs_data_success">
        Successfully Uploaded Measured Signs Data!
    </string>
    <string name="exit">Exit</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="empty_string" />
    <string name="camera_permission_denied_alert_title">Camera Permission Denied!</string>
    <string name="camera_permission_denied_alert_message">
        "Covid-19 Symptom Monitor app can't function without access to Camera! Go to Settings and Enable Camera Access. Exiting the app!"
    </string>
    <string name="video_saved_message">The captured video was successfully saved at :</string>
    <string name="save_video_error_message">
        There was an error in saving the video please try "Measure Heart Rate" again!
    </string>
    <string name="heart_rate_measurement_started_message">
        Video capturing has been started, the Heart Rate Measurement will begin in 5 seconds! Please press your finger softly on the camera lens while covering the flash light.
    </string>
    <string name="video_capture_completed_message">
        Video was successfully completed! The preview of the recorded video will be played on the camera view.
    </string>
    <string name="heart_rate_measurement_completed_message">
        Heart Rate Measurement completed successfully!
    </string>
    <string name="heart_rate_measurement_in_progress">
        Heart Rate Measurement is still in Progress! Please wait.
    </string>
    <string name="respiratory_rate_measurement_in_progress">
        Respiratory Rate Measurement is still in Progress! Please wait.
    </string>
    <string name="respiratory_rate_measurement_started">
        Respiratory Rate Measurement will begin in 5 seconds! Please place your phone on your chest for a period of 45 seconds and breathe normally, the phone will vibrate when the measurement is completed!
    </string>
    <string name="respiratory_rate_measurement_completed">
        Respiratory Rate Measurement completed successfully!
    </string>
    <string name="symptoms_navigation_prerequisite_message">
        Please Measure Heart Rate and Respiratory Rate and Upload Signs Data before navigating to Symptoms!
    </string>
    <string name="upload_signs_heart_rate_prerequisite_message">
        Please Measure Heart Rate and try again!
    </string>
    <string name="upload_signs_respiratory_rate_prerequisite_message">
        Please Measure Respiratory Rate and try again!
    </string>
    <string name="enter_username">Enter username</string>
    <string name="login_button_text">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="username">shebbarm</string>
    <string name="password">0453@asu</string>
    <string name="incorrect_username_or_password">Either the username or the password is incorrect! Please try again!</string>
    <string name="db_files">dbfiles</string>
    <string-array name="select_symptom_spinner_items">
        <item>Nausea</item>
        <item>Headache</item>
        <item>Diarrhea</item>
        <item>Soar Throat</item>
        <item>Fever</item>
        <item>Muscle Ache</item>
        <item>Loss of Smell or Taste</item>
        <item>Cough</item>
        <item>Shortness of Breath</item>
        <item>Feeling Tired</item>
    </string-array>
</resources>